making fragments change as the user select home , group , channel (also changed the three activitys to fragments)

--- a/app/src/main/res/menu/bottom_nav.xml
+++ b/app/src/main/res/menu/bottom_nav.xml
@@ -10,6 +10,6 @@
         android:title="Group"/>
     <item
         android:id="@+id/channel"
-        android:icon="@drawable/channel_icon"
+        android:icon="@drawable/chanl"
         android:title="Channel"/>
 </menu>
