--- a/app/src/main/res/layout/fragment_channel.xml
+++ b/app/src/main/res/layout/fragment_channel.xml
@@ -3,27 +3,39 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#0D1B2A"
     tools:context=".ChannelFragment">
 
     <TextView
-        android:id="@+id/songs"
+        android:id="@+id/channel"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="60dp"
         android:padding="20dp"
         android:text="Channels 🌐"
-        android:textAlignment="center"
-        android:background="@drawable/channel_top_layout"
-        android:textColor="#87CEEB"
-        android:textSize="28dp"
+        android:paddingStart="100dp"
+        android:background="@drawable/chat_top_layout"
+        android:textColor="#FFA500"
+        android:layout_marginStart="60dp"
+        android:textSize="17dp"
         android:textStyle="bold">
     </TextView>
+
+    <ImageView
+        android:layout_width="31dp"
+        android:layout_height="31dp"
+        android:id="@+id/channelmenu"
+        android:layout_marginTop="15dp"
+        android:layout_marginLeft="15dp"
+        android:background="@drawable/menu"
+        android:layout_centerVertical="true">
+    </ImageView>
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/recyclerview"
-        android:layout_marginTop="81dp"
-        android:layout_below="@id/songs">
+        android:layout_marginTop="60dp"
+        android:layout_below="@id/channel">
     </androidx.recyclerview.widget.RecyclerView>
 
 </FrameLayout>
