Making the  switch on when passcode activity appears and making it off automatically when the activity is closed

--- a/app/src/main/res/layout/drawer_footer.xml
+++ b/app/src/main/res/layout/drawer_footer.xml
@@ -5,6 +5,7 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:padding="16dp"
+    android:layout_marginTop="20dp"
     android:background="@drawable/lavender_border"
     android:gravity="center_vertical">
 
