--- a/app/src/main/res/layout/fragment_group.xml
+++ b/app/src/main/res/layout/fragment_group.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#0D1B2A"
+    android:id="@+id/Fragment_group"
+    android:background="#E0F7FA"
     tools:context=".GroupFragment">
 
     <TextView
@@ -26,7 +27,7 @@
         android:id="@+id/groupmenu"
         android:layout_marginTop="15dp"
         android:layout_marginLeft="15dp"
-        android:background="@drawable/menu"
+        android:background="@drawable/menu_black"
         android:layout_centerVertical="true">
     </ImageView>
 
