--- a/app/src/main/res/layout/drawer_footer.xml
+++ b/app/src/main/res/layout/drawer_footer.xml
@@ -3,11 +3,42 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="?android:attr/colorBackground"
     android:padding="8dp">
 
+    <ImageView
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:id="@+id/iconviewlarge"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/circle_profile"
+        android:layout_centerVertical="true">
+    </ImageView>
+
+    <TextView
+        android:id="@+id/usernamelong"
+        android:layout_width="400dp"
+        android:layout_height="50dp"
+        android:text="Your username"
+        android:textStyle="bold"
+        android:layout_marginEnd="200dp"
+        android:textSize="19dp"
+        android:maxLines="1"
+        android:ellipsize="end"
+        android:textColor="@color/black"
+        android:paddingTop="10dp"
+        android:paddingLeft="10dp"
+        android:layout_marginLeft="10dp">
+    </TextView>
+    <!-- Divider -->
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@android:color/darker_gray"
+        android:layout_marginVertical="4dp"/>
     <!-- ===== PassCode Item ===== -->
     <LinearLayout
         android:id="@+id/passcode_item"
@@ -56,12 +87,7 @@
 
     </LinearLayout>
 
-    <!-- Divider -->
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@android:color/darker_gray"
-        android:layout_marginVertical="4dp"/>
+
 
     <!-- ===== Night Mode Item ===== -->
     <LinearLayout
