--- a/app/src/main/res/layout/drawer_footer.xml
+++ b/app/src/main/res/layout/drawer_footer.xml
@@ -95,6 +95,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/lavender_border"
+        android:layout_marginTop="10dp"
         android:orientation="horizontal"
         android:gravity="center_vertical"
         android:padding="12dp">
@@ -136,4 +137,35 @@
             tools:ignore="UseSwitchCompatOrMaterialXml" />
     </LinearLayout>
 
+    <!-- ===== Log out ===== -->
+    <LinearLayout
+        android:id="@+id/logOutDrawer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/lavender_border"
+        android:orientation="horizontal"
+        android:gravity="center_vertical"
+        android:padding="12dp">
+
+        <ImageView
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:src="@drawable/log_out_icon"
+            android:layout_marginEnd="12dp"/>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Log out"
+                android:textSize="16sp"
+                android:textStyle="bold"/>
+        </LinearLayout>
+</LinearLayout>
 </LinearLayout>
