--- a/app/src/main/res/layout/drawer_footer.xml
+++ b/app/src/main/res/layout/drawer_footer.xml
@@ -8,15 +8,22 @@
     android:background="?android:attr/colorBackground"
     android:padding="8dp">
 
-    <ImageView
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:id="@+id/iconviewlarge"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/circle_profile"
-        android:layout_centerVertical="true">
-    </ImageView>
+    <FrameLayout
+        android:id="@+id/avatarContainer"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:background="@drawable/circle_profile">
+
+        <TextView
+            android:id="@+id/avatarLetter"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            android:textColor="@android:color/white"/>
+    </FrameLayout>
+
 
     <TextView
         android:id="@+id/usernamelong"
