--- a/app/src/main/res/layout/drawer_footer.xml
+++ b/app/src/main/res/layout/drawer_footer.xml
@@ -2,6 +2,7 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -12,17 +13,28 @@
         android:id="@+id/avatarContainer"
         android:layout_width="90dp"
         android:layout_height="90dp"
-        android:background="@drawable/circle_profile">
+        android:background="@drawable/circle_profile"
+        android:clickable="true"
+        android:focusable="true">
 
         <TextView
             android:id="@+id/avatarLetter"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
-            android:textSize="24sp"
+            android:textSize="32sp"
             android:textStyle="bold"
             android:textColor="@android:color/white"/>
+
+        <com.google.android.material.imageview.ShapeableImageView
+            android:id="@+id/avatarImage"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:scaleType="centerCrop"
+            android:visibility="gone"
+            app:shapeAppearanceOverlay="@style/CircleImageView"/>
     </FrameLayout>
+
 
 
     <TextView
