--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,4 +12,8 @@
     </style>
 
     <style name="Theme.Chatting" parent="Base.Theme.Chatting" />
+
+    <style name="CircleImageView">
+        <item name="cornerSize">50%</item>
+    </style>
 </resources>
