--- a/app/src/main/res/layout/activity_pass_code.xml
+++ b/app/src/main/res/layout/activity_pass_code.xml
@@ -47,7 +47,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="40dp"
-                android:text="Login"
+                android:text="Submit"
                 tools:ignore="HardcodedText">
             </Button>
         </LinearLayout>
